@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               XML-FeedPP
-version:            0.41
+version:            0.42
 abstract:           ~
 author:  []
 license:            perl
