@@ -305,8 +305,13 @@ MODULE DEPENDENCIES
 AUTHOR
     Yusuke Kawasaki, http://www.kawa.net/
 
-COPYRIGHT AND LICENSE
-    Copyright (c) 2006-2009 Yusuke Kawasaki. All rights reserved. This
-    program is free software; you can redistribute it and/or modify it under
-    the same terms as Perl itself.
+COPYRIGHT
+    The following copyright notice applies to all the files provided in this
+    distribution, including binary files, unless explicitly noted otherwise.
+
+    Copyright 2006-2010 Yusuke Kawasaki
+
+LICENSE
+    This library is free software; you can redistribute it and/or modify it
+    under the same terms as Perl itself.
 
