@@ -1,5 +1,10 @@
 # XML::FeedPP Changes
 
+2010/10/31 (0.42)
+    * fixed #55197: Not a HASH reference at XML/FeedPP.pm line 2260
+      https://rt.cpan.org/Ticket/Display.html?id=55197
+      (thanks to MDOM)
+
 2009/11/21 (0.41)
     * supports generating CDATA section by setting SCALAR ref value like XML::TreePP.
       (thanks to Mario Domgoergen)
